--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Hive</title><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="default"><link rel="apple-touch-icon-precomposed" href="img/hive_icon.png"><link rel="stylesheet" type="text/css" href="css/styles.min.css"></head><body class="blackgrad"><div id="portal">
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Hive</title><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="default"><link rel="apple-touch-icon-precomposed" href="img/hive_icon.png"><link rel="stylesheet" type="text/css" href="css/styles.min.css"></head><body class="blackgrad"><div id="portal">
 
  <div id="login" class="page current">
 <div class="toolbar">
